--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
                          <div id="navbar" class="collapse navbar-collapse">
                               <ul class="nav navbar-nav navbar-right text-center">
-                                   <li id="item"><a href="#">Magical Unicorns</a></li>
-                                   <li id="item"><a href="#ccr">Cotton Candy Rainbows</a></li>
-                                   <li id="item"><a href="#leprechaun">Leprechaun</a></li>
+                                   <li id="item"><a href="#">Chicken</a></li>
+                                   <li id="item"><a href="#ccr">Beef</a></li>
+                                   <li id="item"><a href="#leprechaun">Sushi</a></li>
                               </ul>
                          </div>
                     </div>
@@ -47,7 +47,7 @@
                          <h1 class="text-center">Our Menu</h1>
                          <div class="col-md-12">
                               <div class="jumbotron" id="mu">
-                                   <h2 class="text-center">Magical Unicorns</h2>
+                                   <h2 class="text-center">Chicken</h2>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                    <a href="#">Scroll to Top</a>
                               </div>
@@ -55,7 +55,7 @@
 
                          <div class="col-md-6">
                               <div class="jumbotron" id="ccr">
-                                   <h2 class="text-center">Cotton Candy Rainbows</h2>
+                                   <h2 class="text-center">Beef</h2>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
                                    <a href="#">Scroll to Top</a>
                               </div>
@@ -63,7 +63,7 @@
 
                          <div class="col-md-6">
                               <div class="jumbotron" id="leprechaun">
-                                   <h2 class="text-center">Leprechaun</h2>
+                                   <h2 class="text-center">Sushi</h2>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
                                    <a href="#">Scroll to Top</a>
                               </div>
